--- a/style.css
+++ b/style.css
@@ -141,6 +141,8 @@ textarea {
 }
 
 #preview iframe {
+  margin-right: 1rem;
+  margin-right: 30px;
   width: 90%;
   height: 650px;
   border: 1px solid black;
@@ -162,7 +164,6 @@ textarea {
 
 #fullscreenButton {
   display: block;
-  color: white;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 5px;
@@ -246,8 +247,7 @@ footer:hover #arrow {
   animation: pulse 1.5s ease-out infinite;
 }
 #output{
-  margin-right: 1rem;
-  margin-right: 30px;
+  
 
 }
 #reset {
@@ -258,6 +258,9 @@ footer:hover #arrow {
   border-radius: 5px;
   cursor: pointer;
   margin-right: 0.5rem;
+}
+#reset:hover{
+  color:black;
 }
 
 
@@ -277,6 +280,10 @@ footer:hover #arrow {
   border-radius: 5px;
   cursor: pointer; 
   transition: background-color 0.3s; 
+}
+#Poradnik:hover{
+  color:black;
+
 }
 
 
