--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ footer {
 
 footer:hover {
   bottom: 0; 
-  background-color: #48682D; /* Jaśniejszy odcień po najechaniu */
+  background-color: #3D5D27; /* Jaśniejszy odcień po najechaniu */
   color:white;
   text-decoration: none;
 
