--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ main {
   flex-wrap: wrap; 
   flex: 1;
   justify-content: space-around; 
+  gap: 1rem; 
 }
 
 section {
@@ -340,6 +341,8 @@ button {
   font-size: 120%;
   font-family: DejaVu Sans Mono, monospace;
   float: right;
+  width: auto;
+  
 }
 button:hover {
   background-color: #43DB00; 
@@ -354,26 +357,27 @@ button:hover {
 
 @media screen and (max-width: 768px) {
   main {
-    flex-direction: column; 
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 
   #editor, #middle, #preview {
-    width: 100%; 
-    margin-bottom: 1rem; 
-  }
-
-  button {
     width: 100%;
-    margin-top: 0.5rem;
+    flex: 1 1 auto;
   }
-
-  #next-level, #reset {
+  #buttons{
     width: 100%;
-    margin-top: 0.5rem;
+  }
+  #reset,#Poradnik,#fullscreenButton,#next-level{
+    width: 100%;
+  }
+  #next-level{
+    margin-top:1rem;
     
+    
+  }
+
+  
 }
 
-  #preview iframe {
-    height: 250px;
-  }
-}
